# model-deployment

./: .clang-format  .gitignore  CMakeLists.txt  README.md  tutorial.ipynb
cuda-snippets/: CMakeLists.txt
cuda-snippets/common/: cuda_helper.h  random.h
cuda-snippets/matmul/: CMakeLists.txt  README.md  benchmark.ipynb  matmul-bak.cu  matmul.cpp  matmul.cu  matmul_kernel_test.cu  matmul_kernels.cu  matmul_kernels.cuh  matmul_pybind.cu
cuda-snippets/scan/: scan.cu
examples/: CMakeLists.txt
examples/torch_ext/: README.md  lltm_cpp.cpp  lltm_cuda_kernel.cu  main_jit.py
examples/torchscript_ext/: CMakeLists.txt  README.md  compute_scripted.pt  foo.pt  load_ops_from_setup.py  load_ops_jit.py  myops_add.cc  setup.py
torch-ext/: CMakeLists.txt
torch-ext/cpp_front/: CMakeLists.txt  main.cc
torch-ext/pybindx/: pybindx.cpp  pybindx_test.ipynb
torch-ext/tensor/: CMakeLists.txt  main.cu
torch-ext/torch_ext/: CMakeLists.txt  README.md  lltm_cpp.cpp  main_jit.py  main_setup.py  setup.py  torch_ext.cpp  torch_ext_test.ipynb
triton/: extern-functions.ipynb  fused-attention.ipynb  grouped-gemm.ipynb  layer-norm.ipynb  persistent-matmul.ipynb
tutorials/: CMakeLists.txt  export_onnx.ipynb  onnx_model_deployment.ipynb
tutorials/pybindx/: CMakeLists.txt  README.md  pybindx_test.ipynb  setup.py
tutorials/torch_ext/: CMakeLists.txt  main_setup.py  setup.py
tutorials/torchscript_ext/: CMakeLists.txt  custom_class.cc  ext_ops.cc
